# SRMproject

./: .flake8  MakeFile  Makefile  manage.py  pyproject.toml
apps/: admin.py  apps.py  decorators.py  forms.py  mixins.py  signals.py  urls.py  utils.py
apps/fixtures/: customers.json  debts.json  products.json  purchaseitems.json  purchases.json  saleitems.json  sales.json  users.json
apps/migrations/: 0001_initial.py  0002_remove_product_category_delete_category.py  0003_alter_sale_payment_type.py
apps/models/: __init__.py  base.py  customers.py  debts.py  products.py  purchases.py  sales.py  users.py
apps/views/: customers.py  debts.py  employees.py  products.py  purchases.py  reports.py  sales.py  users.py
credits/: apps.py  forms.py  urls.py
customers/: models.py
customers/migrations/: 0001_initial.py
inventory/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
inventory/migrations/: 0001_initial.py
products/: forms.py  tests.py  urls.py
reports/: models.py  urls.py  views.py
reports/migrations/: 0001_initial.py
root/: settings.py  urls.py
root/core/: middleware.py  middlewere.py
sales/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
sales/migrations/: 0001_initial.py
templates/: 403.html  base.html  dashboard.html
templates/credits/: credit_confirm_delete.html  credit_detail.html  credit_form.html  credit_list.html  credit_payment_form.html
templates/debt/: customer_debt_list.html  customer_list.html  debt_detail.html  debt_payment.html
users/: admin.py  forms.py  models.py  urls.py  views.py
(+35 files in other folders)
