[project]
name = "srmproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "canvas>=0.59.0",
    "django>=5.2.5",
    "django-widget-tweaks>=1.5.0",
    "psycopg2-binary>=2.9.10",
    "reportlab>=4.4.3",
    "store>=2020.2.10",
    "xlsxwriter>=3.2.5",
]
